# hello_opengl

./: .gitignore  CMakeLists.txt  hello_opengl  shader.h  vertex.glsl
dependencies/include/glad/: glad.h
include/: camera.h  element_buffer.h  shader.h  vertex_array.h  vertex_buffer.h
shaders/: fragment.glsl  vertex.glsl
src/: camera.cpp  element_buffer.cpp  main.cpp  shader.cpp  vertex_array.cpp  vertex_buffer.cpp
